<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/shopitem_number"
            android:textColor="#ff333333"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/shopitem_go_timer"
            android:textColor="#ff333333"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/shopitem_adrress"
            android:textColor="#ff333333"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/shopitem_man"
            android:textColor="#ff333333"
            android:textSize="13sp" />

    </LinearLayout>
</LinearLayout>
