<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp">
    <TextView
        android:id="@+id/worker_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:gravity="center|left"
        android:text="@string/sendworker"
        android:textColor="@color/black"
        android:textIsSelectable="true" />
    <TextView
        android:id="@+id/sendtime"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:layout_gravity="right"
        android:gravity="center|right"
        android:text="2019.08.09 11:22:01"
        android:textColor="@color/black"
        android:textIsSelectable="true" />
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/glay"/>
    <TextView
        android:id="@+id/number_txt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="20dp"
        android:gravity="left|center"
        android:text="@string/shopitem_number"
        android:textColor="@color/black"
        android:textIsSelectable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/glay" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <TextView
        android:id="@+id/time_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/shopitem_out_timer"
        android:textColor="@color/black"
        android:textIsSelectable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/shopitem_adrress"
        android:textColor="@color/black"
        android:textIsSelectable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</LinearLayout>
