<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/atom" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#ff333333"
            android:textSize="13sp"
            android:text="@string/shopitem_number" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/delete" />

        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/glay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:gravity="center|left"
        android:paddingLeft="30dp"
        android:text="@string/shopitem_go_timer"
        android:textColor="#ff333333"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:gravity="center|left"
        android:paddingLeft="30dp"
        android:text="@string/shopitem_adrress"
        android:textColor="#ff333333"
        android:textSize="13sp" />
</LinearLayout>
