<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            app:srcCompat="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changekeybartxt"
            android:textColor="@color/yelllow"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/glay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="50dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/lock_fill" />

        <View
            android:layout_width="20dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/key_new"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/fixkeyfisthint"

            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="50dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/lock_fill" />

        <View
            android:layout_width="20dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/key_sure"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/fixkeysencondhint"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/changekey_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_background_yellow"
            android:gravity="center"
            android:text="@string/surekeychange"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

</LinearLayout>
